hw2/RawGrammar.java
/* Generated By:JavaCC: Do not edit this line. RawGrammar.java */
import java.io.*;

public class RawGrammar implements RawGrammarConstants {
  public static void main(String [] args) {
    if (args.length < 1) {
      System.out.println("Need a file name as command-line argument.");
      return;
    }
    try {
      FileReader input = new FileReader(args[0]);
      new RawGrammar(input).Program();
      input.close();
    } catch (TokenMgrError e) {
      System.err.println(e);
    } catch (Exception e) {
      System.err.println(e);
    }
  }

//
// PARSER SECTION ---------------------------------------------------------------
//

// Program -> {ClassDecl}
//
  static final public void Program() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 6:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ClassDecl();
    }
    jj_consume_token(0);
  }

// ClassDecl -> "class" <ID> ["extends" <ID>] "{" {VarDecl} {MethodDecl} "}"
//
  static final public void ClassDecl() throws ParseException {
    jj_consume_token(6);
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 7:
      jj_consume_token(7);
      jj_consume_token(ID);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(54);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      VarDecl();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      MethodDecl();
    }
    jj_consume_token(55);
  }

// MethodDecl -> "public" ExtType <ID> "(" [Param {"," Param}] ")"
//                 "{" {VarDecl} {Stmt} "}"
//            |  "public" "static" "void" "main" "(" "String" "[" "]" <ID> ")"
//                 "{" {VarDecl} {Stmt} "}"
//
  static final public void MethodDecl() throws ParseException {
    if (jj_2_3(2)) {
      jj_consume_token(9);
      ExtType();
      jj_consume_token(ID);
      jj_consume_token(50);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
      case ID:
        Param();
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 48:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_4;
          }
          jj_consume_token(48);
          Param();
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(51);
      jj_consume_token(54);
      label_5:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_5;
        }
        VarDecl();
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 19:
        case 20:
        case 22:
        case 23:
        case 24:
        case ID:
        case 54:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_6;
        }
        Stmt();
      }
      jj_consume_token(55);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 9:
        jj_consume_token(9);
        jj_consume_token(8);
        jj_consume_token(11);
        jj_consume_token(10);
        jj_consume_token(50);
        jj_consume_token(15);
        jj_consume_token(52);
        jj_consume_token(53);
        jj_consume_token(ID);
        jj_consume_token(51);
        jj_consume_token(54);
        label_7:
        while (true) {
          if (jj_2_2(2)) {
            ;
          } else {
            break label_7;
          }
          VarDecl();
        }
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 19:
          case 20:
          case 22:
          case 23:
          case 24:
          case ID:
          case 54:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_8;
          }
          Stmt();
        }
        jj_consume_token(55);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

// Param -> Type <ID>
//
  static final public void Param() throws ParseException {
    Type();
    jj_consume_token(ID);
  }

// VarDecl -> Type <ID> ["=" InitExpr] ";"
//
  static final public void VarDecl() throws ParseException {
    Type();
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      InitExpr();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(47);
  }

// ExtType -> Type | "void"
//
  static final public void ExtType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 12:
    case 13:
    case 14:
    case ID:
      Type();
      break;
    case 11:
      jj_consume_token(11);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Type -> BasicType
//      |  BasicType "[" "]"
//      |  <ID>
//
  static final public void Type() throws ParseException {
    if (jj_2_4(2)) {
      BasicType();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 12:
      case 13:
      case 14:
        BasicType();
        jj_consume_token(52);
        jj_consume_token(53);
        break;
      case ID:
        jj_consume_token(ID);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

// BasicType -> "int" | "double" | "boolean"
//
  static final public void BasicType() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 13:
      jj_consume_token(13);
      break;
    case 14:
      jj_consume_token(14);
      break;
    case 12:
      jj_consume_token(12);
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Stmt -> "{" {Stmt} "}"
//      |  ExtId "(" [Args] ")" ";"
//      |  Lvalue "=" InitExpr ";"
//      |  "if" "(" Expr ")" Stmt ["else" Stmt]
//      |  "while" "(" Expr ")" Stmt
//      |  "System" "." "out" "." "println" "(" [PrArg] ")" ";"
//      |  "return" [Expr] ";"
//
  static final public void Stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 54:
      jj_consume_token(54);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 19:
        case 20:
        case 22:
        case 23:
        case 24:
        case ID:
        case 54:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_9;
        }
        Stmt();
      }
      jj_consume_token(55);
      break;
    default:
      jj_la1[17] = jj_gen;
      if (jj_2_6(3)) {
        ExtId();
        jj_consume_token(50);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 16:
        case 17:
        case 19:
        case INTLIT:
        case DBLLIT:
        case ID:
        case 34:
        case 39:
        case 50:
          Args();
          break;
        default:
          jj_la1[14] = jj_gen;
          ;
        }
        jj_consume_token(51);
        jj_consume_token(47);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 19:
        case ID:
          Lvalue();
          jj_consume_token(46);
          InitExpr();
          jj_consume_token(47);
          break;
        case 20:
          jj_consume_token(20);
          jj_consume_token(50);
          Expr();
          jj_consume_token(51);
          Stmt();
          if (jj_2_5(2)) {
            jj_consume_token(21);
            Stmt();
          } else {
            ;
          }
          break;
        case 22:
          jj_consume_token(22);
          jj_consume_token(50);
          Expr();
          jj_consume_token(51);
          Stmt();
          break;
        case 24:
          jj_consume_token(24);
          jj_consume_token(49);
          jj_consume_token(25);
          jj_consume_token(49);
          jj_consume_token(26);
          jj_consume_token(50);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 16:
          case 17:
          case 19:
          case INTLIT:
          case DBLLIT:
          case STRLIT:
          case ID:
          case 34:
          case 39:
          case 50:
            PrArg();
            break;
          default:
            jj_la1[15] = jj_gen;
            ;
          }
          jj_consume_token(51);
          jj_consume_token(47);
          break;
        case 23:
          jj_consume_token(23);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 16:
          case 17:
          case 19:
          case INTLIT:
          case DBLLIT:
          case ID:
          case 34:
          case 39:
          case 50:
            Expr();
            break;
          default:
            jj_la1[16] = jj_gen;
            ;
          }
          jj_consume_token(47);
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

// Args -> Expr {"," Expr}
//
  static final public void Args() throws ParseException {
    Expr();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 48:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_10;
      }
      jj_consume_token(48);
      Expr();
    }
  }

// PrArg -> Expr | <STRLIT>
//
  static final public void PrArg() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 16:
    case 17:
    case 19:
    case INTLIT:
    case DBLLIT:
    case ID:
    case 34:
    case 39:
    case 50:
      Expr();
      break;
    case STRLIT:
      jj_consume_token(STRLIT);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// InitExpr -> "new" BasicType "[" <INTLIT> "]"
//          |  "new" <ID> "(" ")"
//          |  Expr
//
  static final public void InitExpr() throws ParseException {
    if (jj_2_7(2)) {
      jj_consume_token(18);
      BasicType();
      jj_consume_token(52);
      jj_consume_token(INTLIT);
      jj_consume_token(53);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 18:
        jj_consume_token(18);
        jj_consume_token(ID);
        jj_consume_token(50);
        jj_consume_token(51);
        break;
      case 16:
      case 17:
      case 19:
      case INTLIT:
      case DBLLIT:
      case ID:
      case 34:
      case 39:
      case 50:
        Expr();
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

// Expr -> Expr BinOp Expr
//      |  UnOp Expr
//      |  "(" Expr ")"
//      |  ExtId "(" [Args] ")"
//      |  Lvalue
//      |  Literal
//
  static final public void Expr() throws ParseException {
    if (jj_2_8(2)) {
      Primary();
      BinOp();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 34:
      case 39:
        UnOp();
        Expr();
        break;
      case 50:
        jj_consume_token(50);
        Expr();
        jj_consume_token(51);
        break;
      default:
        jj_la1[23] = jj_gen;
        if (jj_2_9(3)) {
          ExtId();
          jj_consume_token(50);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 16:
          case 17:
          case 19:
          case INTLIT:
          case DBLLIT:
          case ID:
          case 34:
          case 39:
          case 50:
            Args();
            break;
          default:
            jj_la1[22] = jj_gen;
            ;
          }
          jj_consume_token(51);
        } else if (jj_2_10(3)) {
          Lvalue();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 16:
          case 17:
          case INTLIT:
          case DBLLIT:
            Literal();
            break;
          default:
            jj_la1[24] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
  }

  static final public void Primary() throws ParseException {
    jj_consume_token(50);
    Expr();
    jj_consume_token(51);
  }

// Lvalue -> ExtId "[" Expr "]"
//        |  ExtId
  static final public void Lvalue() throws ParseException {
    if (jj_2_11(2)) {
      ExtId();
      jj_consume_token(52);
      Expr();
      jj_consume_token(53);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 19:
      case ID:
        ExtId();
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

// ExtId -> ["this" "."] <ID> {"." <ID>}
//
  static final public void ExtId() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 19:
      jj_consume_token(19);
      jj_consume_token(49);
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
    jj_consume_token(ID);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 49:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_11;
      }
      jj_consume_token(49);
      jj_consume_token(ID);
    }
  }

// Literal -> <INTLIT> | <DBLLIT> | "true" | "false"
//
  static final public void Literal() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTLIT:
      jj_consume_token(INTLIT);
      break;
    case DBLLIT:
      jj_consume_token(DBLLIT);
      break;
    case 16:
      jj_consume_token(16);
      break;
    case 17:
      jj_consume_token(17);
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void BinOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 38:
      jj_consume_token(38);
      BinOp1();
      break;
    default:
      jj_la1[29] = jj_gen;
      ;
    }
  }

  static final public void BinOp1() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 37:
      jj_consume_token(37);
      BinOp2();
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
  }

  static final public void BinOp2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 40:
      jj_consume_token(40);
      BinOp3();
      break;
    default:
      jj_la1[31] = jj_gen;
      ;
    }
  }

  static final public void B3() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      jj_consume_token(46);
      break;
    default:
      jj_la1[35] = jj_gen;
      ;
    }
    BinOp3();
  }

  static final public void BinOp3() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 33:
      jj_consume_token(33);
      BinOp4();
      break;
    default:
      jj_la1[36] = jj_gen;
      ;
    }
  }

  static final public void BinOp4() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 35:
      jj_consume_token(35);
      Expr();
      break;
    default:
      jj_la1[38] = jj_gen;
      ;
    }
  }

// BinOp -> "+" | "-" | "*" | "/" | "&&" | "||"
//       |  "==" | "!=" | "<" | "<=" | ">" | ">="
//
//void BinOp(): {}
//{
//  "+"  | "-"  | "*" | "/"  | "&&" | "||"
//| "==" | "!=" | "<" | "<=" | ">"  | ">="
//}

// UnOp -> "-" | "!"
//
  static final public void UnOp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 34:
      jj_consume_token(34);
      break;
    case 39:
      jj_consume_token(39);
      break;
    default:
      jj_la1[40] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_3R_17() {
    if (jj_3R_31()) return true;
    return false;
  }

  static private boolean jj_3R_31() {
    if (jj_3R_32()) return true;
    return false;
  }

  static private boolean jj_3R_28() {
    if (jj_scan_token(23)) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    if (jj_scan_token(24)) return true;
    return false;
  }

  static private boolean jj_3R_26() {
    if (jj_scan_token(22)) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    if (jj_scan_token(20)) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(50)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_17()) jj_scanpos = xsp;
    if (jj_scan_token(51)) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_23()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) {
    jj_scanpos = xsp;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) {
    jj_scanpos = xsp;
    if (jj_3R_28()) return true;
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_scan_token(54)) return true;
    return false;
  }

  static private boolean jj_3R_30() {
    if (jj_scan_token(49)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(13)) {
    jj_scanpos = xsp;
    if (jj_scan_token(14)) {
    jj_scanpos = xsp;
    if (jj_scan_token(12)) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_39() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(29)) {
    jj_scanpos = xsp;
    if (jj_scan_token(30)) {
    jj_scanpos = xsp;
    if (jj_scan_token(16)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_34() {
    if (jj_3R_14()) return true;
    if (jj_scan_token(52)) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_3R_31()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3R_34()) {
    jj_scanpos = xsp;
    if (jj_scan_token(32)) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_29() {
    if (jj_scan_token(19)) return true;
    if (jj_scan_token(49)) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_29()) jj_scanpos = xsp;
    if (jj_scan_token(ID)) return true;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_30()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_11() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(52)) return true;
    if (jj_3R_32()) return true;
    return false;
  }

  static private boolean jj_3R_20() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3R_33()) return true;
    }
    return false;
  }

  static private boolean jj_3R_33() {
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_scan_token(11)) return true;
    }
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_3R_21()) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(50)) return true;
    if (jj_3R_32()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_37() {
    if (jj_3R_39()) return true;
    return false;
  }

  static private boolean jj_3_10() {
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3_9() {
    if (jj_3R_16()) return true;
    if (jj_scan_token(50)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_19()) jj_scanpos = xsp;
    if (jj_scan_token(51)) return true;
    return false;
  }

  static private boolean jj_3R_36() {
    if (jj_scan_token(50)) return true;
    return false;
  }

  static private boolean jj_3R_35() {
    if (jj_3R_38()) return true;
    return false;
  }

  static private boolean jj_3_8() {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_32() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3R_35()) {
    jj_scanpos = xsp;
    if (jj_3R_36()) {
    jj_scanpos = xsp;
    if (jj_3_9()) {
    jj_scanpos = xsp;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3R_37()) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(9)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_7() {
    if (jj_scan_token(18)) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_38() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(34)) {
    jj_scanpos = xsp;
    if (jj_scan_token(39)) return true;
    }
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(21)) return true;
    if (jj_3R_15()) return true;
    return false;
  }
